--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.1.5",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.17",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
