--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scroll": "^1.9.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
